<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">现金物流</string>
    <string name="module1">任务</string>
    <string name="module1New">选择</string>
    <string name="module2">消息</string>
    <string name="module3">我</string>
    <string name="fun_task_type">任务选择</string>
    <string name="action_settings">Settings</string>
    <string name="registerNameHint">登录名</string>
    <string name="nullError">不能为空</string>
    <string name="passwordlengthError">长度为6-12位</string>
    <string name="passworddifferentError">密码不一致</string>
    <string name="registerPasswordHint">密码（长度6-12位）</string>
    <string name="password">密码</string>
    <string name="registerPassword2Hint">确认密码</string>
    <string name="forgetPassword">忘记密码？</string>
    <string name="register_now">立即注册 >></string>
    <string name="logining">正在登录，请稍候...</string>
    <string name="loginFailed">登录失败</string>
    <string name="information">个人信息</string>
    <string name="updatePassword">修改密码</string>
    <string name="oldPasswordHint">原密码</string>
    <string name="submitPassword">确定修改</string>
    <string name="setting">设置</string>
    <string name="clear">清除数据</string>
    <string name="nickName">姓名：</string>
    <string name="license">车牌号：</string>
    <string name="partner">搭档：</string>
    <string name="userName">账号：</string>
    <string name="head_image">头像</string>
    <string name="submenu4">设置</string>
    <string name="submenu5">修改密码</string>
    <string name="submenu6">检查更新</string>
    <string name="ver">1.0</string>
    <string name="logout">注销登录</string>
    <string name="info_sex">性别</string>
    <string name="version">版本信息</string>
    <string name="confirm">确定</string>
    <string name="exit">退出</string>
    <string name="writeCardHeader">钞箱制卡</string>
    <string name="writeCardHint">请输入钞箱编号</string>
    <string name="writeCardBtnText">确定修改</string>
    <string name="handInTips">上缴金额</string>
    <string name="reHandInTips">确认上缴金额</string>

    <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="read_message">查看消息</string>
    <string name="time">时间：</string>
    <string name="tab_1_btn_escort">交接任务</string>
    <string name="tab_1_btn_in_car">确认上车</string>
    <string name="tab_1_btn_out_car">确认下车</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="down_state">正在下载：%s</string>
    <string name="app_error">应用程序错误</string>
    <string name="app_error_message">很抱歉，小屁孩耍脾气啦。<br/>我们会帮你教训一下这个小屁孩！</string>
    <string name="submit_report">打报告去</string>
    <string name="hint_username">输入账号/邮箱</string>
    <string name="hint_password">密码</string>
    <string name="login">登录</string>
    <string name="tip_please_input_username">请输入用户名</string>
    <string name="tip_please_input_password">请输入密码</string>
    <string name="tip_please_input_password_less6">密码长度不能小于6位，多于12位</string>
    <string name="tip_password_invalid">密码不一致</string>
    <string name="progress_login">正在登录…</string>
    <string name="loading">加载中…</string>
    <string name="uploading">保存中…</string>
    <string name="tip_login_error_for_network">对不起,无法登录</string>
    <string name="tip_login_error_no_user">没找到用户，请检查用户名和密码</string>
    <string name="tip_no_internet">当前没有可用的网络链接</string>
    <string name="tip_loading_error">加载数据失败</string>
    <string name="tip_please_input_verification_code">请输入验证码</string>
    <string name="send_verification_code">重发验证码</string>
    <string name="btn_read">读取</string>
    <string name="btn_stop">停止</string>
    <string name="btn_clear">清空</string>
    <string name="btn_save">保存</string>
    <string name="operation_1_title">撤防</string>
    <string name="operation_1_tip">如遇到绿灯，请拍照上传，报项目经理</string>
    <string name="operation_2_title">吞没卡检查</string>
    <string name="operation_2_tip">如有吞没卡，请记录，并拍照</string>
    <string name="operation_3_title">获取动态密码</string>
    <string name="operation_3_tip">请注意查收短信</string>
    <string name="operation_4_title">检查机器</string>
    <string name="operation_4_tip">检查封包、卡钞、废钞箱工作</string>
    <string name="operation_5_title">更换钞箱</string>
    <string name="operation_5_tip">--</string>
    <string name="operation_6_title">关闭保险箱门</string>
    <string name="operation_6_tip">请拍照上传</string>
    <string name="operation_7_title">清机加钞</string>
    <string name="operation_7_tip">--</string>
    <string name="operation_8_title">耗材检查及更换工作</string>
    <string name="operation_8_tip">--</string>
    <string name="operation_9_title">布防</string>
    <string name="operation_9_tip">如遇异常，请拍照上传</string>
    <string name="operation_10_title">重控物品检查</string>
    <string name="operation_10_tip">请带走所有重控物品</string>
    <string name="operation_11_title">卫生</string>
    <string name="operation_11_tip">请拍照上传</string>
    <string name="operation_12_title">物业巡检</string>
    <string name="operation_12_tip">如遇异常，请拍照上传</string>
    <string name="operation_13_title">自拍留存</string>
    <string name="operation_13_tip">请拍照上传</string>

    <!-- qucik option -->
    <string name="quick_option_text">文字</string>
    <string name="quick_option_album">相册</string>
    <string name="quick_option_photo">拍照</string>
    <string name="quick_option_voice">语音</string>
    <string name="quick_option_note">便签</string>
    <string name="quick_option_scan">扫一扫</string>
    <string name="quick_option_find">找人</string>
    <string name="operation_photo">拍照</string>
    <string name="operation_success">正常</string>
    <string name="operation_password">获取密码</string>
    <string name="operation_put_in_cashbox">放入钞箱</string>
    <string name="operation_put_out_cashbox">取回钞箱</string>
    <string name="finish_task">执行成功</string>
    <string name="get_password_msg">请查收短信</string>
    <string name="idInventoryFinished_Colon">盘点结束：</string>
    <string name="found_statistics">已扫描 ：%d</string>
    <!-- bluetooth页面 -->
    <string name="Text_bt">蓝牙端口</string>
    <string name="Text_btname">蓝牙名称</string>
    <string name="Text_btmax">蓝牙地址</string>
    <string name="button_btcon">连接</string>
    <!-- connect页面 -->
    <string name="text_type">机型</string>
    <string name="text_porttype">接口</string>
    <string name="text_printway">传输方式</string>
    <string name="TextView_link">联系我们</string>
    <string name="TextView_linktest">跳转到下一页</string>
    <string name="TextView_close">关闭</string>
    <string name="mes_confail">连接失败</string>
    <string name="mes_consuccess">连接成功</string>
    <string name="mes_nextpage">请先连接</string>
    <string name="validate_code_tip">没有收到验证码？请点击此处重新获取</string>
    <string name="already_read">已读取:0</string>
    <string name="total">总数:0</string>
    <string name="title_activity_key_list">KeyListActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>