<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/pic_header_02"
        android:gravity="center_vertical" >

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/back"
            android:onClick="back" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_toRightOf="@id/btn_back"
            android:text="@string/module1"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/popupmenu_btn"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_toLeftOf="@id/btn_map"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/pic_sy_16"
            android:onClick="popupMenu" />
        
        <ImageButton
            android:id="@+id/btn_map"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="5dp"
            android:background="@drawable/map"
            android:onClick="openMap" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_1_tip"
                app:opetation_title="@string/operation_1_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_2_tip"
                app:opetation_title="@string/operation_2_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="operation_5_tip"
                app:opetation_title="@string/operation_3_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_4_tip"
                app:opetation_title="@string/operation_4_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_5_tip"
                app:opetation_title="@string/operation_5_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_6"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_6_tip"
                app:opetation_title="@string/operation_6_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_7_tip"
                app:opetation_title="@string/operation_7_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_8"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_8_tip"
                app:opetation_title="@string/operation_8_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_9"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_9_tip"
                app:opetation_title="@string/operation_9_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_10"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_10_tip"
                app:opetation_title="@string/operation_10_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_11"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_11_tip"
                app:opetation_title="@string/operation_11_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_12"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_12_tip"
                app:opetation_title="@string/operation_12_title" />

            <com.jintoufs.logstics.widget.OperationView
                android:id="@+id/operation_13"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:bg="@color/seashell"
                app:opetation_status="0"
                app:opetation_tip="@string/operation_13_tip"
                app:opetation_title="@string/operation_13_title" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>