<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f7f7f7"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/login_view"
        android:layout_width="1280dp"
        android:layout_height="128dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_2" />
    <EditText
        android:id="@+id/login_user_edit"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/login_view"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="40dp"
        android:padding="13dp"
        android:singleLine="true"
        android:background="@drawable/login_editbox"
        android:hint="@string/registerNameHint"
        android:maxLength="15"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/login_passwd_edit"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/login_user_edit"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:background="@drawable/login_editbox"
        android:hint="@string/registerPasswordHint"
        android:inputType="textPassword"
        android:maxLength="12"
        android:padding="13dp"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_passwd_edit"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="fill_parent"
            android:layout_height="35dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@drawable/btn_style_green"
            android:gravity="center"
            android:onClick="login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="14sp" />
    </RelativeLayout>

</RelativeLayout>