<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbarStyle="outsideOverlay" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@drawable/preference_single_item"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp" >

                <com.jintoufs.logstics.widget.AvatarView
                    android:id="@+id/iv_avatar"
                    android:layout_width="88dp"
                    android:layout_height="88dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@null"
                    android:src="@drawable/widget_dface"
                    app:border_color="@color/white"
                    app:border_width="2dip" />

                <RelativeLayout
                    android:id="@+id/relativeLayout1"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/iv_avatar"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp" >

                    <TextView
                        android:id="@+id/userNameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/userName"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tabUserName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/userNameTitle"
                        android:padding="3dp"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/nickNameTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/tabUserName"
                        android:layout_centerVertical="true"
                        android:padding="3dp"
                        android:text="@string/nickName"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tabNickName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/tabUserName"
                        android:layout_below="@id/tabUserName"
                        android:padding="3dp"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/licenseTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/tabNickName"
                        android:layout_centerVertical="true"
                        android:padding="3dp"
                        android:text="@string/license"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tabLicense"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/tabNickName"
                        android:layout_below="@id/tabNickName"
                        android:padding="3dp"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/partnerTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_below="@id/tabLicense"
                        android:layout_centerVertical="true"
                        android:padding="3dp"
                        android:text="@string/partner"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tabPartner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@id/tabLicense"
                        android:layout_below="@id/tabLicense"
                        android:padding="3dp"
                        android:textColor="#000"
                        android:textSize="12sp" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_updatePwd"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/preference_single_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/lock" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:padding="8dp"
                    android:text="@string/submenu5"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/mm_submenu" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_finger"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/preference_single_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:padding="8dp"
                    android:text="录入指纹"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_setting"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/preference_single_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/setting" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:padding="8dp"
                    android:text="@string/setting"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/lay_clear"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/preference_single_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/refresh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:padding="8dp"
                    android:text="@string/clear"
                    android:textColor="#000"
                    android:textSize="14sp" />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/lay_checkUpdate"
                android:layout_width="fill_parent"
                android:layout_height="45dp"
                android:background="@drawable/preference_single_item"
                android:clickable="true"
                android:gravity="center_vertical" >

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="30dp"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:src="@drawable/refresh" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"
                    android:padding="8dp"
                    android:text="@string/version"
                    android:textColor="#000"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/setting_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:clickable="true"
                    android:scaleType="matrix"
                    android:text="@string/ver" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_exit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/btn_style_red"
                android:clickable="true"
                android:scaleType="matrix"
                android:text="@string/exit"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>